# halo2-svd041

./: .gitignore  Cargo.toml  Check_svd_input.ipynb  README.md  input-creator.py  run.sh  rust-toolchain  svd_error.py
configs/: halo2_lib.json
data/: divide_by_32.in  fixed_point.in  halo2_lib.pk  halo2_lib.snark  halo2_lib.vk
examples/: barrel_shift.rs  divide_by_32.rs  fixed_point.rs  halo2_lib.rs  matrix.rs  matrix_remy.rs  poseidon.rs  range.rs  rlc_tests.rs  rlp_tests.rs  succ_poseidon.rs  svd_example.rs  variable_shift.rs
src/: lib.rs  nh_scaf.rs
src/gadget/: fixed_point.rs
src/matrix/: mod.rs  test_matrix.rs
src/scaffold/: mod.rs
src/svd/: mod.rs
src/utils/: executor.rs
