# Notes
#   * https://hackmd.io/@axiom/SJw3p-qX3
#        * Overview of the Halo2 Challenge API and Random Linear Combinations (RLC)

[package]
name = "halo2-svd"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
ark-std = { version = "0.3.0", features = ["print-trace"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
clap-num = "1.0.2"
num-bigint = "0.4"
num-integer = "0.1"
itertools = "0.10.5"
hex = "0.4.3"

halo2-base = "0.4.1"
axiom-eth = "0.4.2"
snark-verifier-sdk = "0.1.7"
halo2_proofs = "0.3.0"

linfa = "0.7.0"
linfa-linear = "0.7.0"
linfa-logistic = "0.7.0"
ndarray = "0.15.6"
linfa-datasets = { version = "0.7.0", features = ["diabetes", "winequality"] }
num-traits = "0.2.18"

zk_fixed_point_chip = { path = "../ZKFixedPointChip041", version = "0.2.0" }
chrono = "0.4.38"

[dev-dependencies]
test-log = "0.2.11"
ethers-core = "2.0.6"

[features]
default = []

# Dev / testing mode. We make opt-level = 3 to improve proving times (otherwise it is really slow)
[profile.dev]
opt-level = 0
debug = 2 # change to 0 or 2 for more or less debug info
overflow-checks = true # default
incremental = true # default

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 0
# Set this to 1 or 2 to get more useful backtraces
debug = 2
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
panic = "abort"
incremental = false
