# Notes
#   * https://hackmd.io/@axiom/SJw3p-qX3
#        * Overview of the Halo2 Challenge API and Random Linear Combinations (RLC)

[package]
name = "halo2-svd"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
ark-std = { version = "0.3.0", features = ["print-trace"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
clap-num = "1.0.2"
num-bigint = "0.4"
num-integer = "0.1"
itertools = "0.10.5"
hex = "0.4.1"

halo2-axiom = "= 0.4.1"
halo2-base = "= 0.4.1"
axiom-eth = "= 0.4.1"
#snark-verifier-sdk = "0.1.7"
halo2_proofs = "0.3.0"

# crypto
rlp = "=0.5.2"
ethers-core = { version = "2.0.10" }
# mpt implementation
hasher = { version = "=0.1", features = ["hash-keccak"] }
cita_trie = "=5.0.0"
#num-bigint = { version = "0.4" }
sha3 = "0.10.6"
# rand
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
#rand = "0.8"
rand_chacha = "0.3.1"

# aggregation
snark-verifier = { version = "=0.1.7", default-features = false }
# snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.7-git", default-features = false }
snark-verifier-sdk = { version = "=0.1.7", default-features = false }
# snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.7-git", default-features = false }

# generating circuit inputs from blockchain
ethers-providers = { version = "2.0.10", optional = true }
tokio = { version = "1.28", default-features = false, features = ["rt", "rt-multi-thread", "macros"], optional = true }
futures = { version = "0.3", optional = true }

#linfa = "0.7.0"
#linfa-linear = "0.7.0"
#linfa-logistic = "0.7.0"
#ndarray = "0.15.6"
#linfa-datasets = { version = "0.7.0", features = ["diabetes", "winequality"] }
#num-traits = "0.2.18"

#zk_fixed_point_chip = { path = "../ZKFixedPointChip041", version = "0.2.0" }
zk_fixed_point_chip = {git ="https://github.com/neilcouture/ZKFixedPointChip041"}

chrono = "0.4.38"

[dev-dependencies]
test-log = "0.2.11"
ethers-core = "2.0.6"

[features]
default = []

# Dev / testing mode. We make opt-level = 3 to improve proving times (otherwise it is really slow)
[profile.dev]
opt-level = 0
debug = 2 # change to 0 or 2 for more or less debug info
overflow-checks = true # default
incremental = true # default

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 0
# Set this to 1 or 2 to get more useful backtraces
debug = 2
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
panic = "abort"
incremental = false
